feat: GET linked devices utv endpoint
